Adição do conteúdo na main

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <main>
-
+        <h1>DCC202 - Atividade 12: Lukas Freitas de Carvalho</h1>
+        <p>Esta é a página principal que usa JavaScript para adicionar iteração.</p>
     </main>
 </body>
 </html>
