--- a/index.html
+++ b/index.html
@@ -5,11 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC202 - Atividade 12: Lukas Freitas de Carvalho</title>
     <script type="module" src="main.js"></script>
+    <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
     <main>
         <h1>DCC202 - Atividade 12: Lukas Freitas de Carvalho</h1>
         <p>Esta é a página principal que usa JavaScript para adicionar iteração.</p>
+        <section>
+            <form name="entrada">
+                <fieldset>
+                    <legend>Origem</legend>
+                    <label><input type="radio" name="origem" value="pomar" checked />Pomar</label>
+                    <label><input type="radio" name="origem" value="joao" />João</label>
+                    <label><input type="radio" name="origem" value="maria" />Maria</label>
+
+                </fieldset>
+
+                <fieldset>
+                    <legend>Destino</legend>
+                    <label><input type="radio" name="destino" value="pomar" checked />Pomar</label>
+                    <label><input type="radio" name="destino" value="joao" />João</label>
+                    <label><input type="radio" name="destino" value="maria" checked />Maria</label>
+                </fieldset>
+
+                <label for="ifruta">Fruta:</label>
+
+                <select id="ifruta" name="fruta">
+                    <option value="maca">Maçã</option>
+                    <option value="pera">Pera</option>
+                    <option value="banana">Banana</option>
+                    <option value="uva">Uva</option>
+                </select>
+                <label for="iqtd">Quantidade:</label>
+                <input id="iqtd" type="number" name="quantidade" min="0" max="12" step="1" value="1" />
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+        <section id="saida">
+            <h2>João</h2>
+            <ol id="joao"></ol>
+            <h2>Maria</h2>
+            <ol id="maria"></ol>
+            <button id="Limpar">Limpar Lista</button>
+        </section>
     </main>
 </body>
 </html>
